# syntext

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Makefile  PLAN.md  README.md  context7.json  install.ps1  install.sh  rust-toolchain.toml
.github/workflows/: ci.yml  nightly.yml  release.yml
.specify/memory/: constitution.md
benches/: freshness.rs  index_build.rs  index_open.rs  open_search_e2e.rs  query_latency.rs  selectivity.rs
benches/support/: mod.rs
benchmarks/: repo_presets.json
docs/: ARCHITECTURE.md  BENCHMARKS.md  BENCHMARK_REPOS.md  COMPARISON_FFF.md  DEFERRED.md  KNOWN_ISSUES.md  PERFORMANCE_BASELINE.md  PERFORMANCE_EXTERNAL.md  RELEASE.md  SECURITY.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_coverage_invariant.rs
packaging/homebrew/Casks/: syntext.rb
scripts/: README.md  bench_compare.py  extract_release_notes.py  fff_driver.py  render_homebrew_cask.sh  requirements.txt  weights.rs  weights_gen.py  weights_gen_colab.ipynb
scripts/notebooks/: bigram_counts_final.npz  weights_gen_colab.ipynb
specs/001-hybrid-code-search-index/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-hybrid-code-search-index/checklists/: full-review.md
specs/001-hybrid-code-search-index/contracts/: cli.md  library-api.md  segment-format.md
src/: base64.rs  error.rs  git_util.rs  lib.rs  main.rs  path_util.rs  rl_main.rs  wasm.rs
src/cli/: args.rs  bench.rs  catchup.rs  commands.rs  config.rs  fallback.rs  init.rs  logger.rs  manage.rs  mod.rs  post_filter.rs  render.rs  scope.rs  scope_tests.rs  search.rs  search_args.rs  sym.rs  tests.rs
src/cli/args/: compat.rs  globs.rs  mod.rs
src/cli/render/: color.rs  context.rs  count.rs  flat.rs  invert.rs  json.rs  mod.rs  only_matching.rs  pattern.rs
src/cli/scope/: files.rs  mod.rs
src/hook/: mod.rs
src/hook/core/: files.rs  instructions.rs  json.rs  mod.rs  rewrite.rs  rewrite_grep.rs  rewrite_rg.rs  rewrite_tests.rs  shell.rs  shell_tests.rs
src/hook/protocols/: claude.rs  copilot.rs  cursor.rs  gemini.rs  mod.rs
src/hook/vendors/: claude.rs  codex.rs  copilot.rs  cursor.rs  gemini.rs  githooks.rs  mod.rs  openclaw.rs  opencode.rs  rules.rs  tests.rs
src/index/: build.rs  build_external.rs  calibrate.rs  commit.rs  compact.rs  compact_plan.rs  compact_tests.rs  deletes_idx.rs  deletes_idx_tests.rs  delta.rs  delta_apply.rs  encoding.rs  freshness.rs  freshness_tests.rs  fsmonitor.rs  helpers.rs  io_util.rs  manifest.rs  manifest_tests.rs  merge.rs  mod.rs  open.rs  overlay.rs  overlay_tests.rs  path_resolve.rs  paths_idx.rs  paths_idx_tests.rs  pending.rs  search_symbols.rs  segment.rs  snapshot.rs  stats.rs  tests.rs  update.rs  walk.rs  walk_tests.rs  wasm_index.rs
src/index/overlay/: build.rs  mod.rs
src/index/segment/: dict_read.rs  mod.rs  open.rs  reader.rs  segment_writer.rs  tests.rs
src/path/: filter.rs  filter_tests.rs  mod.rs
src/posting/: mod.rs  roaring_util.rs
src/query/: mod.rs  planner.rs  regex_decompose.rs
src/search/: executor.rs  lines.rs  mod.rs  resolver.rs  tests.rs  verifier.rs
src/symbol/: extractor.rs  mod.rs
src/tokenizer/: covering.rs  mod.rs  tests.rs  weights.rs
tests/fixtures/corpus/: .gitignore  README.md
tests/fixtures/corpus/edge_cases/: binary_looking.txt  crlf_endings.txt  long_line.txt  no_newline_at_end.txt  repeated_pattern.txt  special chars in name.txt  unicode_identifiers.py
tests/fixtures/corpus/edge_cases/nested/deep/path/: file.txt
tests/fixtures/corpus/go/: main.go
tests/fixtures/corpus/go/search/: client.go  client_test.go
tests/fixtures/corpus/java/: ParseQuery.java  SearchResult.java  SearchService.java  SearchServiceTest.java
tests/fixtures/corpus/python/: __init__.py  config.py  main.py  query_engine.py
tests/fixtures/corpus/python/data/: sample_emails.txt
tests/fixtures/corpus/python/tests/: test_query_engine.py
tests/fixtures/corpus/src/: lib.rs  main.rs
tests/fixtures/corpus/src/api/: handler.rs  routes.rs
tests/fixtures/corpus/src/models/: config.rs  user.rs
tests/fixtures/corpus/src/utils/: helpers.rs  parser.rs
tests/fixtures/corpus/typescript/: batch.ts  index.ts  query.ts  types.ts
tests/fixtures/corpus/typescript/components/: SearchBar.tsx
tests/integration/: cli.rs  correctness.rs  incremental.rs  index_build.rs  oracle_cli.proptest-regressions  oracle_cli.rs  oracle_freshness.rs  oracle_helpers.rs  oracle_incremental.proptest-regressions  oracle_incremental.rs  oracle_self.rs  symbols.rs
tests/oracle/: DIVERGENCES.md  ORACLE_VERSION  TRIAGE.md
tests/oracle/regressions/: .gitkeep  repro_45977b47dc1f41aa.json  repro_bf18cfbef891f8f8.json  repro_e1477df13c5a98f4.json  repro_e1c1603c26349124.json
tests/unit/: boundary_fuzz.rs  overlay.rs  posting.rs  query.rs  tokenizer.rs
