[package]
name = "syntext"
version = "1.0.0"
edition = "2021"
description = "Hybrid code search index for agent workflows"
license = "MIT"
readme = "README.md"
keywords = ["search", "code-search", "index", "grep", "trigram"]
categories = ["command-line-utilities", "development-tools", "text-processing"]
repository = "https://github.com/whit3rabbit/syntext"
[[bin]]
name = "st"
path = "src/main.rs"

[lib]
name = "syntext"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Regex and verification
regex = "1"
regex-syntax = "0.8"
memchr = "2"

# Memory-mapped I/O (native only; WASM uses in-memory Vec<u8>)
memmap2 = { version = "0.9", optional = true }

# Bitmap posting lists
roaring = "0.11"

# Parallel index building (native only; WASM is single-threaded)
rayon = { version = "1", optional = true }

# Zero-copy segment format

# Lock-free snapshot swapping
arc-swap = "1"

# Advisory file locking (native only)
fs2 = { version = "0.4", optional = true }

# Gitignore and file-type filtering (native only)
ignore = { version = "0.4", optional = true }

# CLI (native only)
clap = { version = "4", features = ["derive", "env"], optional = true }

# WASM bindings (wasm feature only)
wasm-bindgen = { version = "0.2", optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }
# getrandom/js needed for uuid v4 and regex on wasm32-unknown-unknown
getrandom = { version = "0.2", features = ["js"], optional = true }
js-sys = { version = "0.3", optional = true }

# UUIDs for segment IDs — also needed on WASM for segment type-checking
# `js` feature activates getrandom/js so uuid::Uuid::new_v4() works on wasm32
uuid = { version = "1", features = ["v4", "js"] }

# Checksum — pure arithmetic, WASM-compatible
xxhash-rust = { version = "0.8", features = ["xxh64"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(unix)'.dependencies]
# POSIX constants (O_NOFOLLOW). Usage is gated by #[cfg(unix)] in io_util.rs.
# See io_util.rs for why the old hardcoded constants were wrong on MIPS/SPARC.
libc = "0.2"

# Symbol index (optional)
tree-sitter = { version = "0.26", optional = true }
rusqlite = { version = "0.32", features = ["bundled"], optional = true }
tree-sitter-rust = { version = "0.24", optional = true }
tree-sitter-python = { version = "0.25", optional = true }
tree-sitter-javascript = { version = "0.25", optional = true }
tree-sitter-typescript = { version = "0.23", optional = true }
tree-sitter-go = { version = "0.25", optional = true }
tree-sitter-java = { version = "0.23", optional = true }
tree-sitter-c = { version = "0.24", optional = true }
tree-sitter-cpp = { version = "0.23", optional = true }

[features]
# Native default: everything enabled.
default = ["memmap2", "rayon", "fs2", "ignore", "clap"]
# WASM target: in-memory index, wasm-bindgen API, no filesystem.
wasm = ["wasm-bindgen", "serde-wasm-bindgen", "getrandom", "js-sys"]
symbols = [
    "tree-sitter", "rusqlite",
    "tree-sitter-rust", "tree-sitter-python", "tree-sitter-javascript",
    "tree-sitter-typescript", "tree-sitter-go", "tree-sitter-java",
    "tree-sitter-c", "tree-sitter-cpp",
]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3"
proptest = "1"

[[test]]
name = "correctness"
path = "tests/integration/correctness.rs"

[[test]]
name = "index_build"
path = "tests/integration/index_build.rs"

[[test]]
name = "tokenizer"
path = "tests/unit/tokenizer.rs"

[[test]]
name = "posting"
path = "tests/unit/posting.rs"

[[test]]
name = "query"
path = "tests/unit/query.rs"

[[test]]
name = "overlay"
path = "tests/unit/overlay.rs"

[[test]]
name = "boundary_fuzz"
path = "tests/unit/boundary_fuzz.rs"

[[test]]
name = "incremental"
path = "tests/integration/incremental.rs"

[[test]]
name = "cli"
path = "tests/integration/cli.rs"

[[test]]
name = "symbols"
path = "tests/integration/symbols.rs"
required-features = ["symbols"]

[[bench]]
name = "query_latency"
harness = false

[[bench]]
name = "selectivity"
harness = false

[[bench]]
name = "index_build"
harness = false

[package.metadata.deb]
name = "syntext"
maintainer = "syntext contributors"
copyright = "2026, syntext contributors"
license-file = ["LICENSE", "4"]
extended-description = "Hybrid code search index for agent workflows. Sparse n-gram content index with Roaring bitmap path index and optional Tree-sitter symbol index."
section = "utils"
priority = "optional"
assets = [
    ["target/release/st", "usr/bin/st", "755"],
]
