[package]
name = "ripline-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.ripline]
path = ".."

[[bin]]
name = "fuzz_coverage_invariant"
path = "fuzz_targets/fuzz_coverage_invariant.rs"
test = false
doc = false
bench = false
